# mm2-rtui

./: .cursorignore  .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md  check_seed_ports.py
src/: app.rs  coins.rs  config.rs  file_manager.rs  kdf_client.rs  logger.rs  main.rs  qr_compact.rs
